--- a/ac1/app/src/main/res/layout/fragment_slideshow.xml
+++ b/ac1/app/src/main/res/layout/fragment_slideshow.xml
@@ -17,6 +17,16 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.043" />
+
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="354dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="139dp"
+        tools:ignore="MissingConstraints"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
